[project]
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"
imutils = "^0.5.4"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"

[tool.ruff.lint]
select = ["ALL"]
preview = true
ignore = ["S311", "CPY", "E501", "FA", "TD002", "TD003", "S301", "S403"]
